# Infection

./: .gitignore  Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  CMakeLists.txt  InfectionEagles.sln  Makefile  NavMeshComponents.csproj  NavMeshComponentsEditor.csproj  Unity.2DPlatformer.Tutorials.csproj  cmake_install.cmake
Assets/: New Terrain.asset
Assets/FPS/Scenes/: MainScene.unity
Assets/FPS/Scripts/: Damageable.cs  EnemyController.cs  Health.cs
Assets/Objects/: office_interior.fbx  suzume_eat.fbx  suzume_fly.fbx  suzume_fly_in.fbx  suzume_fly_out.fbx  suzume_idle_1.fbx  suzume_idle_2.fbx  suzume_tex.tif  suzume_walk.fbx
Assets/Objects/Materials/: suzume_tex.mat
Assets/Scenes/: MainScene.unity  samplescene.unity
ProjectSettings/: ProjectSettings.asset
Temp/: EnemyPrefabLayout.wlt  LevelMaterialLayout.wlt  RoomAssetLayout.wlt  TutorialLayout.wlt  UnityTempFile-3ef1c7c7fdcf6d3c79ccd2201ea32196  UnityTempFile-907482281d9d6a1e8955a3aa579913d1
Temp/__Backupscenes/: 0.backup
include/: Entity.hpp  Infection.hpp
src/: Entity.cpp  Infection.cpp
